--- a/index.html
+++ b/index.html
@@ -8,12 +8,14 @@
      </head>
      
      <body>
-        <h1>thing</h1>
-	<h2>thing</h2>
-	<h3>thing</h3>
-	<h4>thing</h4>
-	<h5>thing</h5>
-	<p>jacrhisiart.tk/thing</p>
+   <style>
+	   {
+ 
+style = "body { background-color: white; color: black; font-family: "
+"'Comic Sans MS', 'Chalkboard SE', 'Comic Neue', sans-serif; }\n"
+"hr { border: 0; border-bottom: 1px dashed; }\n";
+}
+	     </style>
 	
 	
      </body>
