--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
 	<h1>HAHAHAHAH COMIC SANS MS!!!!</h1>
      <body>
    <style>
-	   {
- 
-style = "body { background-color: white; color: black; font-family: "
-"'Comic Sans MS', 'Chalkboard SE', 'Comic Neue', sans-serif; }\n"
-"hr { border: 0; border-bottom: 1px dashed; }\n";
-}
+h1 {
+   color: 	#FF0000;
+	   }
+{
+font-family: "Comic Sans MS", cursive, sans-serif";
+	   }
 	     </style>
 	
 	
